--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "2.0.88",
+    "@prisma/client": "6.19.1",
+    "bcrypt": "6.0.0",
+    "clsx": "2.1.1",
+    "jsonwebtoken": "9.0.3",
     "next": "16.1.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "zod": "4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -20,6 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
+    "prisma": "6.19.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
