--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "@ai-sdk/openai": "2.0.88",
     "@prisma/client": "6.19.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.4",
     "bcrypt": "6.0.0",
-    "clsx": "2.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "jsonwebtoken": "9.0.3",
+    "lucide-react": "^0.562.0",
     "next": "16.1.0",
+    "openai": "^6.15.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0",
     "zod": "4.2.1"
   },
   "devDependencies": {
@@ -30,6 +36,7 @@
     "eslint-config-next": "16.1.0",
     "prisma": "6.19.1",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
