--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "postinstall": "prisma generate",
     "lint": "eslint"
   },
   "dependencies": {
     "@ai-sdk/openai": "2.0.88",
-    "@prisma/client": "6.19.1",
+    "@prisma/cli  ent": "6.19.1",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "bcrypt": "6.0.0",
